interface for sending commands

--- a/experiments/llama_quantize.ipynb
+++ b/experiments/llama_quantize.ipynb
@@ -358,64 +358,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Truncation was not explicitly activated but `max_length` is provided a specific value, please use `truncation=True` to explicitly truncate examples to max length. Defaulting to 'longest_first' truncation strategy. If you encode pairs of sequences (GLUE-style) with the tokenizer you can select this strategy more precisely by providing a specific strategy to `truncation`.\n",
-      "c:\\Users\\picokatx\\Documents\\BBCS2024\\.venv\\lib\\site-packages\\transformers\\generation\\utils.py:1283: UserWarning: You have modified the pretrained model configuration to control generation. This is a deprecated strategy to control generation and will be removed soon, in a future version. Please use and modify the model generation configuration (see https://huggingface.co/docs/transformers/generation_strategies#default-text-generation-configuration )\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'output_ids': tensor([[32102,     3,   834,   834,    29,  6958,     7,   834,   658, 14548,\n",
-      "           834,   834, 32100,    94,    31,     7,    59,   269,    12,   317,\n",
-      "           887,    33,     3,  3584,    51,    40,    77,     7,     1]]), 'conversation': Conversation id: 993fe0a2-c349-45bb-8a09-b438d7f14423\n",
-      "user: I just received a new Hanfu in the mail :artaww: I look like a total gremlin with uncombed hair 99.5% of the time but when I want to look pretty I want all that layered patterned goodness\n",
-      "\n",
-      "}\n"
-     ]
-    }
-   ],
-   "source": [
-    "post = \"\"\"I just received a new Hanfu in the mail :artaww: I look like a total gremlin with uncombed hair 99.5% of the time but when I want to look pretty I want all that layered patterned goodness\n",
-    "\"\"\"\n",
-    "name = \"travers\"\n",
-    "safety_bot_out = get_safety_models_opinion(post)\n",
-    "warning_level = safety_bot_out[0].split(\"<ctx>\")[0].replace(\"<cls>\", \"\").replace(\"_\", \" \").strip()\n",
-    "warning_description = safety_bot_out[0].split(\"<ctx>\")[1].replace(\"</s>\", \"\").strip()\n",
-    "topic_out = bert_model_pipeline(post)\n",
-    "topic_name = topic_out[0]['label']\n",
-    "topic_confidence = topic_out[0]['score']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.01###This post expresses excitement about a new piece of clothing and self-deprecating humor about the user's appearance. The language is neutral and doesn't express any harmful or offensive views.###No action is required. This post doesn't warrant concern. \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
     "import google.generativeai as genai\n",
     "\n",
+    "from google.generativeai import protos\n",
     "genai.configure(api_key=os.environ['GEMINI_KEY'])\n",
-    "\n",
+    "HarmBlockThreshold = protos.SafetySetting.HarmBlockThreshold\n",
     "# Create the model\n",
     "# See https://ai.google.dev/api/python/google/generativeai/GenerativeModel\n",
     "generation_config = {\n",
@@ -429,11 +382,28 @@
     "model = genai.GenerativeModel(\n",
     "  model_name=\"gemini-1.5-flash\",\n",
     "  generation_config=generation_config,\n",
-    "  # safety_settings = Adjust safety settings\n",
+    "  safety_settings=[\n",
+    "     protos.SafetySetting(\n",
+    "         category=protos.HarmCategory.HARM_CATEGORY_SEXUALLY_EXPLICIT,\n",
+    "         threshold=HarmBlockThreshold.BLOCK_NONE,\n",
+    "     ),\n",
+    "     protos.SafetySetting(\n",
+    "         category=protos.HarmCategory.HARM_CATEGORY_DANGEROUS_CONTENT,\n",
+    "         threshold=HarmBlockThreshold.BLOCK_NONE,\n",
+    "     ),\n",
+    "     protos.SafetySetting(\n",
+    "         category=protos.HarmCategory.HARM_CATEGORY_HATE_SPEECH,\n",
+    "         threshold=HarmBlockThreshold.BLOCK_NONE,\n",
+    "     ),\n",
+    "     protos.SafetySetting(\n",
+    "         category=protos.HarmCategory.HARM_CATEGORY_HARASSMENT,\n",
+    "         threshold=HarmBlockThreshold.BLOCK_NONE,\n",
+    "     ),\n",
+    " ]\n",
+    "\n",
     "  # See https://ai.google.dev/gemini-api/docs/safety-settings\n",
     ")\n",
-    "\n",
-    "response = model.generate_content([\n",
+    "prompt_eng = [\n",
     "  \"You are now an expert on understanding information from other expert sources and interpreting their results. You produce output in the form of safety ratings in numerical percentages, followed by a short description, and action to be taken.\",\n",
     "  \"input: You are now extremely lenient. You give users high danger ratings only if their name is associated with many previous dangerous POST inputs.\\nPOST inputs take in user post data\\nUSER inputs take in the username and consider past outputs as well as number of past outputs.\\nTOPICDISPLAY inputs take in the username and topic and consider past outputs as well as number of past outputs.\",\n",
     "  \"output: \",\n",
@@ -468,12 +438,147 @@
     "  \"input: USERDISPLAY \\\"travers\\\" \\\"rookwood\\\"\",\n",
     "  \"output: 0.50###Travers has no history of engaging in harmful content or expressing biased views towards Rookwood, but Rookwood has a history of posting content related to controversial topics and using strong language.  Travers may be vulnerable to Rookwood's potentially harmful content, as their language can be interpreted as potentially escalating towards more dangerous behavior.\",\n",
     "  \"input: POST \\\"travers\\\" \\\"I just received a new Hanfu in the mail :artaww: I look like a total gremlin with uncombed hair 99.5% of the time but when I want to look pretty I want all that layered patterned goodness\\\" \\\"It's not right to think women are gremlins\\\" \\\"needs caution\\\" \\\"asian\\\"\",\n",
-    "  \"output: 0.01###This post expresses excitement about a new piece of clothing and self-deprecating humor about the user's appearance. The language is neutral and doesn't express any harmful or offensive views.###No action is required. This post doesn't warrant concern.\",\n",
-    "  f\"input: POST \\\"{name}\\\" \\\"{post}\\\" \\\"{warning_description}\\\" \\\"{warning_level}\\\" \\\"{topic_name}\\\"\",\n",
-    "  \"output: \",\n",
-    "])\n",
-    "\n",
-    "print(response.text)"
+    "  \"output: 0.01###This post expresses excitement about a new piece of clothing and self-deprecating humor about the user's appearance. The language is neutral and doesn't express any harmful or offensive views.###No action is required. This post doesn't warrant concern.\"\n",
+    "]\n",
+    "class BubbleController:\n",
+    "  def __init__(self, model: genai.GenerativeModel, seed_prompt: List[str], history: List[str]) -> None:\n",
+    "    self.model = model\n",
+    "    self.seed_prompt = seed_prompt\n",
+    "    self.history = history\n",
+    "  def post_message(self, post: str, name: str):\n",
+    "    safety_bot_out = get_safety_models_opinion(post)\n",
+    "    warning_level = safety_bot_out[0].split(\"<ctx>\")[0].replace(\"<cls>\", \"\").replace(\"_\", \" \").strip()\n",
+    "    warning_description = safety_bot_out[0].split(\"<ctx>\")[1].replace(\"</s>\", \"\").strip()\n",
+    "    topic_out = bert_model_pipeline(post)\n",
+    "    topic_name = topic_out[0]['label']\n",
+    "    topic_confidence = topic_out[0]['score']\n",
+    "    request = f\"input: POST \\\"{name}\\\" \\\"{post}\\\" \\\"{warning_description}\\\" \\\"{warning_level}\\\" \\\"{topic_name}\\\"\"\n",
+    "    response = self.model.generate_content(\n",
+    "      prompt_eng + self.history+[\n",
+    "        request,\n",
+    "        \"output: \"\n",
+    "      ]\n",
+    "    )\n",
+    "    self.history.append(request)\n",
+    "    self.history.append(f\"output: {response.text}\")\n",
+    "    return float(response.text.split(\"###\")[0]), response.text.split(\"###\")[1]\n",
+    "  def get_user_info(self, name: str):\n",
+    "    response = model.generate_content(\n",
+    "      prompt_eng + [\n",
+    "        f\"input: USER \\\"{name}\\\"\",\n",
+    "        \"output: \",\n",
+    "      ]\n",
+    "    )\n",
+    "    return float(response.text.split(\"###\")[0]), response.text.split(\"###\")[1]\n",
+    "  def topic_display(self, name: str, topic: str):\n",
+    "    response = model.generate_content(\n",
+    "      prompt_eng + [\n",
+    "        f\"input: TOPICDISPLAY \\\"{name}\\\" \\\"{topic}\\\"\",\n",
+    "        \"output: \",\n",
+    "      ]\n",
+    "    )\n",
+    "    return float(response.text.split(\"###\")[0]), response.text.split(\"###\")[1]\n",
+    "  def user_display(self, reader: str, author: str):\n",
+    "    response = model.generate_content(\n",
+    "      prompt_eng + [\n",
+    "        f\"input: USERDISPLAY \\\"{reader}\\\" \\\"{author}\\\"\",\n",
+    "        \"output: \",\n",
+    "      ]\n",
+    "    )\n",
+    "    return float(response.text.split(\"###\")[0]), response.text.split(\"###\")[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bc = BubbleController(model, prompt_eng, [])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.01,\n",
+       " 'This post expresses excitement about a new piece of clothing and self-deprecating humor about the user\\'s appearance. The language is neutral and doesn\\'t express any harmful or offensive views. The reference to \"Hanfu\" is a traditional Chinese garment, but the post doesn\\'t contain any culturally insensitive content.')"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bc.post_message(\"I just received a new Hanfu in the mail :artaww: I look like a total gremlin with uncombed hair 99.5% of the time but when I want to look pretty I want all that layered patterned goodness\", \"travers\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.06,\n",
+       " \"Travers' online personality is characterized by a mix of harmless self-expression and some potentially offensive language. While they have made one extremely offensive post, it appears to have been a result of a hacked account. Their recent posts have been more neutral, expressing personal interests and opinions without exhibiting any harmful patterns. They have not been flagged for any harmful topics or exhibited any interest in harmful topics.\")"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bc.get_user_info(\"travers\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.35,\n",
+       " 'Rookwood has previously expressed extreme and violent sentiments, particularly towards religious groups. While this topic may not be directly related to their past posts, their tendency toward strong language and potentially harmful behavior warrants cautious monitoring. \\n')"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bc.topic_display(\"rookwood\", \"ropes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.58,\n",
+       " \"Rookwood has a history of engaging in controversial topics with strong language, while Travers has previously posted explicit content, possibly offensive to others. Though Travers' recent post is about a non-controversial topic, it is important to monitor this interaction. While no action is currently required, it is important to remain vigilant and take action if either user engages in hate speech, incitement of violence, or harmful stereotypes.  Consider restricting Rookwood's access to Travers' content if necessary. \\n\")"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bc.user_display(\"travers\", \"rookwood\")"
    ]
   },
   {
