bugfixes in demo, added model interface

--- a/experiments/llama_quantize.ipynb
+++ b/experiments/llama_quantize.ipynb
@@ -462,7 +462,17 @@
     "    self.history.append(request)\n",
     "    self.history.append(f\"output: {response.text}\")\n",
     "    return float(response.text.split(\"###\")[0]), response.text.split(\"###\")[1]\n",
+    "  \n",
     "  def get_user_info(self, name: str):\n",
+    "    \"\"\"\n",
+    "    Retrieves user information based on the provided user name.\n",
+    "    \n",
+    "    Args:\n",
+    "        name (str): The name of the user to retrieve information for.\n",
+    "    \n",
+    "    Returns:\n",
+    "        tuple: A tuple containing the generated response confidence score and the response text.\n",
+    "    \"\"\"\n",
     "    response = model.generate_content(\n",
     "      prompt_eng + [\n",
     "        f\"input: USER \\\"{name}\\\"\",\n",
@@ -471,6 +481,16 @@
     "    )\n",
     "    return float(response.text.split(\"###\")[0]), response.text.split(\"###\")[1]\n",
     "  def topic_display(self, name: str, topic: str):\n",
+    "    \"\"\"\n",
+    "    Retrieves information related to a specific topic for a given user.\n",
+    "    \n",
+    "    Args:\n",
+    "        name (str): The name of the user interested in the topic.\n",
+    "        topic (str): The topic of interest.\n",
+    "    \n",
+    "    Returns:\n",
+    "        tuple: A tuple containing the generated response confidence score and the response text.\n",
+    "    \"\"\"\n",
     "    response = model.generate_content(\n",
     "      prompt_eng + [\n",
     "        f\"input: TOPICDISPLAY \\\"{name}\\\" \\\"{topic}\\\"\",\n",
@@ -479,6 +499,16 @@
     "    )\n",
     "    return float(response.text.split(\"###\")[0]), response.text.split(\"###\")[1]\n",
     "  def user_display(self, reader: str, author: str):\n",
+    "    \"\"\"\n",
+    "    Displays information about an author to a reader.\n",
+    "    \n",
+    "    Args:\n",
+    "        reader (str): The name of the user viewing the information.\n",
+    "        author (str): The name of the user whose information is being viewed.\n",
+    "    \n",
+    "    Returns:\n",
+    "        tuple: A tuple containing the generated response confidence score and the response text.\n",
+    "    \"\"\"\n",
     "    response = model.generate_content(\n",
     "      prompt_eng + [\n",
     "        f\"input: USERDISPLAY \\\"{reader}\\\" \\\"{author}\\\"\",\n",
