--- a/experiments/dummy_console_chat.ipynb
+++ b/experiments/dummy_console_chat.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook was initially used when planning the necessary functionality our front-end would require"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
